--- a/index.html
+++ b/index.html
@@ -202,6 +202,41 @@
         </div>
        
     </section>
+    <div class="faq">
+      <h1>Frequently Asked Questions</h1>
+      <ul>
+        <li>
+          <input type="checkbox" checked>
+          <i></i>
+          <h2>Why to visit the wildlifian?</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae debitis iusto voluptatum doloribus rem, qui nesciunt labore tempore fugit iste deserunt incidunt error provident repudiandae laudantium quo ipsa unde perspiciatis, nihil autem distinctio! Deserunt, aspernatur.</p>
+        </li>
+        <li>
+          <input type="checkbox" checked>
+          <i></i>
+          <h2>How to get start with booking?</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente quasi, quia provident facere recusandae itaque assumenda fuga veniam dicta earum dolorem architecto facilis nisi pariatur.</p>
+        </li>
+        <li>
+          <input type="checkbox" checked>
+          <i></i>
+          <h2>Getting Started with online transaction</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam quas placeat assumenda mollitia magni consequatur dolorum, quod nihil distinctio aperiam officia alias! Voluptate dolore ex officiis sit, magnam non a, eligendi pariatur aut.</p>
+        </li>
+        <li>
+          <input type="checkbox" checked>
+          <i></i>
+          <h2>Why to choose the wildlifian</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente quasi, quia provident facere recusandae itaque assumenda fuga veniam dicta earum dolorem architecto facilis nisi pariatur.</p>
+        </li>
+        <li>
+          <input type="checkbox" checked>
+          <i></i>
+          <h2>Wildlifian a full adventure</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente quasi, quia provident facere recusandae itaque assumenda fuga veniam dicta earum dolorem architecto facilis nisi pariatur.</p>
+        </li>
+      </ul>
+    </div>
     <footer>
         <div class="foot">
             <div class="company">
