--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
   <div class="Navbarbody">
     <h1>THE Wildlifian</h1>
     <div class="icons">
-      <i class="fa-regular fa-bars" onclick="myFunction()" id="menu"> menu</i>
-      <i class="fa-solid fa-circle-xmark" onclick="myFunction()" id="close">close</i>
+      <span class="material-symbols-outlined md-48" onclick="myFunction()" id="menu" >
+        <i class="fa-regular fa-bars"></i>
+            </span>
+            <span class="material-symbols-outlined hide" onclick="myFunction()"  id="close">
+                <i class="fa-solid fa-circle-xmark"></i>
+                </span>
+   
 
 
     </div>
